# LE_TROPICAL

./: Presentation_SGRDMS_Pro.pptx  README.md  config.py  generate_acsi_ppt.py  generate_acsi_v3.py  generate_ppt.py  init_db.py  pyproject.toml  requirements.txt
app/: __init__.py  forms.py  models.py  routes.py  transfert.py  utils.py
app/templates/: base.html  consultation_form.html  dashboard.html  login.html  medicament_form.html  modifier_dossier.html  ordonnance_form.html  patient_details.html  patient_dossier_view.html  patient_form.html  patients.html  pharmacie.html  rdv_form.html  rdvs.html  transfert.html  urgence_form.html
app/templates/admin/: assurance_form.html  assurances.html  medecin_form.html  medecins.html  rapports.html  service_form.html  services.html  utilisateur_form.html  utilisateurs.html
app/templates/caisse/: factures.html
app/templates/pharmacie/: ordonnances_list.html
app/templates/reception/: file.html
instance/: sgrdms.db
