[project]
name = "le-tropical"
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "flask",
  "flask-sqlalchemy",
  "flask-login",
  "Flask-WTF",
  "WTForms",
  "email-validator",
  "flask-bcrypt",
  "fpdf2",
  "psycopg2-binary",
  "python-dotenv"
]

[tool.vercel]
entrypoint = "run:app"